<resources>
    <string name="app_name">ToolboxTewari</string>

    <!-- type of bread -->
    <string name="wheat">9-Grain Wheat</string>
    <string name="honey_oat">9-Grain Honey Oat</string>
    <string name="italian">Italian</string>
    <string name="flat_bread">Flat Bread</string>
    <string name="lettuce">Lettuce</string>
    <string name="cucumber">Cucumbers</string>
    <string name="tomato">Tomatoes</string>
    <string name="onion">Onions</string>
    <string name="pickle">Pickles</string>
    <string name="pepper">Peppers</string>
    <string name="olive">Olives</string>
    <string name="jalapeno">Jalapenos</string>

    <string name="ranch">Ranch</string>
    <string name="chipotle">Chipotle Southwest</string>
    <string name="honey">Honey Mustard</string>
    <string name="mayo">Mayonnaise</string>
    <string name="sweet">Sweet Onion</string>
    <string name="bbq">BBQ</string>

    <string-array name="sandwichChoices">
        <item>Ham</item>
        <item>Oven Roasted Chicken</item>
        <item>Sweet Onion Chicken Teriyaki</item>
        <item>Veggie Delite</item>
    </string-array>

</resources>
